--- a/webchinh.html
+++ b/webchinh.html
@@ -23,7 +23,7 @@
                             <li><a href="ao3.html">Áo thun cổ bẻ</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Hỏi đáp</a></li>
+                    <li><a href="Giohang.html"> Giỏ Hàng </a></li>
                     
                 </ul>
         </nav>
