--- a/ao1.1.html
+++ b/ao1.1.html
@@ -13,7 +13,7 @@
         <nav id="menu">
                 <ul>
                     <li><a href="webchinh.html">Trang chủ</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="toi1.html">Tôi</a></li>
                     <li>
                         <a href="!#">Sản phẩm</a>
                         <ul class="sub-menu">
@@ -22,7 +22,7 @@
                             <li><a href="ao3.html">Áo thun cổ bẻ</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Hỏi đáp</a></li>
+                    <li><a href="Giohang.html">Giỏ hàng</a></li>
                     
                 </ul>
         </nav>
