--- a/webchinh.html
+++ b/webchinh.html
@@ -14,16 +14,16 @@
         <nav id="menu">
                 <ul>
                     <li><a href="webchinh.html">Trang chủ</a></li>
-                    <li><a href="#">Giới thiệu</a></li>
+                    <li><a href="toi1.html">Tôi</a></li>
                     <li>
-                        <a href="!#">Sản phẩm</a>
+                        <a href="#">Sản phẩm</a>
                         <ul class="sub-menu">
                             <li><a href="ao1.html">Sweater</a></li>
                             <li><a href="ao2.html">hoodie</a></li>
                             <li><a href="ao3.html">Áo thun cổ bẻ</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">Hỏi đáp</a></li>
+                    <li><a href="Giohang.html">Giỏ hàng</a></li>
                     
                 </ul>
         </nav>
