--- a/ao1.1.html
+++ b/ao1.1.html
@@ -3,31 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <title>SWEATER</title>
     <link rel="stylesheet" href="ao1.1.css">
 </head>
 <body>
 
     <header>
-        <h1> QUYNH SHOP</h1>
         <nav id="menu">
                 <ul>
-                    <li><a href="webchinh.html">Trang chủ</a></li>
-                    <li><a href="toi1.html">Tôi</a></li>
+                    <li><a href="webchinh.html"> <i class="fa-solid fa-house"></i> Trang chủ </a></li>
+                    <li><a href="toi1.html"> <i class="fa-solid fa-user"></i> Tôi</a></li>
                     <li>
-                        <a href="!#">Sản phẩm</a>
+                        <a href="#"> <i class="fa-brands fa-shopify"></i> Sản phẩm</a>
                         <ul class="sub-menu">
                             <li><a href="ao1.html">Sweater</a></li>
                             <li><a href="ao2.html">hoodie</a></li>
                             <li><a href="ao3.html">Áo thun cổ bẻ</a></li>
                         </ul>
                     </li>
-                    <li><a href="Giohang.html">Giỏ hàng</a></li>
+                    <li><a href="Giohang.html"> <i class="fa-solid fa-cart-plus"></i> Giỏ hàng</a></li>
                     
                 </ul>
         </nav>
     </header>
-
     <main>
        
             <div class="product">
