--- a/ao2.html
+++ b/ao2.html
@@ -10,20 +10,19 @@
 <body>
 
     <header>
-        <h1> QUYNH SHOP</h1>
         <nav id="menu">
                 <ul>
-                    <li><a href="webchinh.html">Trang chủ</a></li>
-                    <li><a href="toi1.html">Tôi</a></li>
+                    <li><a href="webchinh.html"> <i class="fa-solid fa-house"></i> Trang chủ </a></li>
+                    <li><a href="toi1.html"> <i class="fa-solid fa-user"></i> Tôi</a></li>
                     <li>
-                        <a href="!#">Sản phẩm</a>
+                        <a href="#"> <i class="fa-brands fa-shopify"></i> Sản phẩm</a>
                         <ul class="sub-menu">
                             <li><a href="ao1.html">Sweater</a></li>
                             <li><a href="ao2.html">hoodie</a></li>
                             <li><a href="ao3.html">Áo thun cổ bẻ</a></li>
                         </ul>
                     </li>
-                    <li><a href="Giohang.html">Giỏ hàng</a></li>
+                    <li><a href="Giohang.html"> <i class="fa-solid fa-cart-plus"></i> Giỏ hàng</a></li>
                     
                 </ul>
         </nav>
